--- a/clase-1/Merengue/index.html
+++ b/clase-1/Merengue/index.html
@@ -38,7 +38,7 @@
    
 </head>
 
-<body style="background-color:#9e9c9c;">
+<body style="background-color:#a9a8a8;">
    
     <section class="estructura-grid">    
 
