cambios en bootstrap completo

--- a/clase-1/Pages/historia.html
+++ b/clase-1/Pages/historia.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Real Merengual Futbol Club</title>
+    <title>Historia</title>
     <!-- <link rel="stylesheet" href="estilos.css"> -->
     <link rel="stylesheet" href="../Merengue/estilosgrid.css">
 
@@ -12,7 +12,7 @@
 
 
     <!-- Icono chiquito arri -->
-    <link rel="shortcut icon" href="/clase-1/Merengue/img/escudo-rmfc.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../Merengue/img/escudo-rmfc.png" type="image/x-icon">
 
 
 
