--- a/clase-1/Pages/historia.html
+++ b/clase-1/Pages/historia.html
@@ -89,7 +89,7 @@
         </header>
 
         <!-- Cada seccion indica la fecha y su explicacion, las tres imagenes agregadas al final refieren a los iconos pequenos en los que iria una estadistica, pero no creo dejarla, sigo pensandolo aun -->
-        <main class="fondoimagenhistoria d-flex flex-column justify-content-around">
+        <main class="fondoimagen d-flex flex-column justify-content-around">
             
             <!-- Titulo -->
             <section class="d-flex justify-content-center p-2 m-3">
