cambios antes de entrega

--- a/clase-1/Pages/contacto.html
+++ b/clase-1/Pages/contacto.html
@@ -148,7 +148,7 @@
                 
                 <p class="hashtag">#MERENGUEHASTALAMUERTE</p>
                 
-                <section class="piedepagina-imagenes">    
+                <section class="mr-5 piedepagina-imagenes">    
                     <!-- Las imagenes de abajo son nefastas, la idea es conseguir iconos y dejarlos en ese ordenes  -->
                     <!-- Logos de comunicacion -->
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram " viewBox="0 0 16 16">
