--- a/clase-1/Pages/plantel.html
+++ b/clase-1/Pages/plantel.html
@@ -71,7 +71,7 @@
 
         <section class="fondoimagen row-12 d-flex justify-content-between">
 
-            <table class="col-5 m-3 rounded table table-dark table-hover">
+            <table class="col-5 m-3 ml-5 rounded table table-dark table-hover">
                 <thead>
                   <tr>
                     <th scope="col">#</th>
@@ -230,7 +230,7 @@
                 
                 <p class="hashtag">#MERENGUEHASTALAMUERTE</p>
                 
-                <section class="piedepagina-imagenes">    
+                <section class="mr-5 piedepagina-imagenes">    
                     <!-- Las imagenes de abajo son nefastas, la idea es conseguir iconos y dejarlos en ese ordenes  -->
                     <!-- Logos de comunicacion -->
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram " viewBox="0 0 16 16">
