cambios antes de entrega2

--- a/clase-1/Pages/contacto.html
+++ b/clase-1/Pages/contacto.html
@@ -76,7 +76,7 @@
 
 
         <!-- Aca va el formulario de contacto, con titulo -->
-        <section class="d-flex flex-column justify-content-center">
+        <section class="fondoimagencontacto d-flex flex-column justify-content-center">
             <section class="m-3 p-2 d-flex justify-content-center animate__animated animate__bounceInLeft">
                 <h2 class="">Tienes alguna pregunta?</h2>
             </section>
