cambios post algo de sass

--- a/clase-1/Pages/historia.html
+++ b/clase-1/Pages/historia.html
@@ -10,7 +10,8 @@
 
 
     <!-- <link rel="stylesheet" href="estilos.css"> -->
-    <link rel="stylesheet" href="../Merengue/estilosgrid.css">
+    <link rel="stylesheet" href="../Merengue/css/estilosgrid.css">
+    <link rel="stylesheet" href="../Merengue/css/estilosbootstrap.css">
 
 
 
