--- a/clase-1/Merengue/index.html
+++ b/clase-1/Merengue/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Real Merengual Futbol Club</title>
     <!-- <link rel="stylesheet" href="estilos.css"> -->
-    <link rel="stylesheet" href="estilosgrid.css">
-    <link rel="stylesheet" href="estilosbootstrap.css">
+    <link rel="stylesheet" href="./css/estilosgrid.css">
+    <link rel="stylesheet" href="./css/estilosbootstrap.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 
@@ -54,7 +54,7 @@
     <header class="row d-flex justify-content-between align-items-end ">
       <section class="col-5 p-1 d-flex flex-row align-items-end  rounded  ">
         <img src="./img/escudo-rmfc.png" alt="">
-        <section class="">
+        <section class="titulares">
           <h2>Real Merengual FC</h2>
           <p class="lead">11 de Diciembre del 2017</p>
           <p class="lead">Pagina Oficial</p>
@@ -151,7 +151,7 @@
 
       <!-- Seccion de videos  -->
 
-      <section class="section4 border-dark rounded col-9 d-flex flex-column align-items-center justify-content-center bg-danger">
+      <section class="section4 border-dark rounded col-9 d-flex flex-column align-items-center justify-content-center ">
 
      
         <video class="rounded-pill border-dark m-3" src="../Merengue/video/video-gol.mp4" class="videoGrande"></video>
