--- a/clase-1/Pages/contacto.html
+++ b/clase-1/Pages/contacto.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
     <!-- Link con CSS -->
-    <link rel="stylesheet" href="../Merengue/estilosgrid.css">
+    <link rel="stylesheet" href="../Merengue/css/estilosgrid.css">
+    <link rel="stylesheet" href="../Merengue/css/estilosbootstrap.css">
+
+    
     <!-- Link con bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
