--- a/clase-1/Pages/partidos.html
+++ b/clase-1/Pages/partidos.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Aqui hay informacion sobre el Real Merengual FC, un cuadro de amigos">
+    <meta name="keywords" content="futbol, amigos, club, liga siete">
     <link rel="stylesheet" href="../Merengue/css/estilosgrid.css">
     <link rel="stylesheet" href="../Merengue/css/estilosbootstrap.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -20,7 +22,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&family=Spline+Sans+Mono:wght@300&display=swap" rel="stylesheet">
 
     
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&family=Spline+Sans+Mono:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&family=Rubik:wght@500&family=Spline+Sans+Mono:wght@300&display=swap" rel="stylesheet">
+
 
 
     <!-- Titulo de pestana -->
