--- a/clase-1/Pages/contacto.html
+++ b/clase-1/Pages/contacto.html
@@ -42,7 +42,7 @@
 
     
 </head>
-<body >
+<body style="background-color:#fefae4;" >
     <section class="container-fluid">
         <!-- Header  -->
         <header class="row d-flex justify-content-between align-items-end ">
