empezamos a meter mixins a partir de ahora luego de ordenar las carpetas

--- a/clase-1/Pages/historia.html
+++ b/clase-1/Pages/historia.html
@@ -75,7 +75,7 @@
               <div class="collapse navbar-collapse  rounded" id="navbarNav">
                 <ul class="d-flex w-100 justify-content-around  navbar-nav nav-tabs">
                   <li class="nav-item ">
-                    <a class="nav-link " href="../Merengue/index.html">Inicio <span class=""></span></a>
+                    <a class="nav-link " href="../index.html">Inicio <span class=""></span></a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="./historia.html">Historia</a>
