mixins implementado, cuando lo usemos de 0 en una pagina va a quedar brutal

--- a/clase-1/index.html
+++ b/clase-1/index.html
@@ -155,12 +155,12 @@
 
       <section class="p-3 section3 w-100 d-flex justify-content-around align-items-center">
 
-        <img src="./merengue/img/studiofama-logo.png" alt="">
-        <img src="./merengue/img/studiofama-logo.png" alt="">
-        <img src="./merengue/img/studiofama-logo.png" alt="">
-        <img src="./merengue/img/studiofama-logo.png" alt="">
-        <img src="./merengue/img/studiofama-logo.png" alt="">
-        <img src="./merengue/img/studiofama-logo.png" alt="">
+        <img class="redondo" src="./merengue/img/studiofama-logo.png" alt="">
+        <img class="redondo" src="./merengue/img/studiofama-logo.png" alt="">
+        <img class="redondo" src="./merengue/img/studiofama-logo.png" alt="">
+        <img class="redondo" src="./merengue/img/studiofama-logo.png" alt="">
+        <img class="redondo" src="./merengue/img/studiofama-logo.png" alt="">
+        <img class="redondo" src="./merengue/img/studiofama-logo.png" alt="">
 
 
       </section>
@@ -170,7 +170,7 @@
       <section class="section4 rounded col-9 d-flex flex-column align-items-center justify-content-center ">
 
      
-        <video class="rounded-pill border-dark m-3" src="../Merengue/video/video-gol.mp4" class="videoGrande"></video>
+        <video class="m-3 col-8" src="../Merengue/video/video-gol.mp4" class="videoGrande"></video>
 
         <section class="d-flex flex-nowrap videosSection row-12 ">
                     
@@ -186,12 +186,12 @@
 
       <section class="p-3 section3 w-100 d-flex justify-content-around align-items-center">
 
-        <img src="./merengue/img/studiofama-logo.png" alt="">
-        <img src="./merengue/img/studiofama-logo.png" alt="">
-        <img src="./merengue/img/studiofama-logo.png" alt="">
-        <img src="./merengue/img/studiofama-logo.png" alt="">
-        <img src="./merengue/img/studiofama-logo.png" alt="">
-        <img src="./merengue/img/studiofama-logo.png" alt="">
+        <img class="redondo" src="./merengue/img/studiofama-logo.png" alt="">
+        <img class="redondo" src="./merengue/img/studiofama-logo.png" alt="">
+        <img class="redondo" src="./merengue/img/studiofama-logo.png" alt="">
+        <img class="redondo" src="./merengue/img/studiofama-logo.png" alt="">
+        <img class="redondo" src="./merengue/img/studiofama-logo.png" alt="">
+        <img class="redondo" src="./merengue/img/studiofama-logo.png" alt="">
 
 
       </section>
