responsive hecho jeje

--- a/clase-1/Pages/partidos.html
+++ b/clase-1/Pages/partidos.html
@@ -88,9 +88,9 @@
   
       </header>
 
-        <main class="partidosmain row-12 row-cols-2 d-flex flex-row justify-content-around ">
-            <section class="d-flex flex-column  col-3 m-5 rounded">
-                <h3 class="p-2">ULTIMOS RESULTADOS</h3>
+        <main class="partidosmain row d-flex flex-row justify-content-around ">
+            <section class="d-flex flex-column col-12 col-sm-12 col-md-5 col-lg-5 rounded">
+                <h3 class="p-2 bg-light">ULTIMOS RESULTADOS</h3>
                 <table class=" shadow m-3 table table-striped table-hover fondorojo">
                     <thead>
                     <tr class="table-light">
@@ -147,7 +147,7 @@
             </section>
             
 
-            <section  class="tablas-partidos col-4 d-flex flex-column justify-content-around">
+            <section  class="tablas-partidos col-12 col-sm-12 col-md-5 col-lg-5 d-flex flex-column justify-content-around">
                 
                 <article>
                     <table class=" m-3 table table-striped table-hover fondorojo">
