--- a/clase-1/Pages/plantel.html
+++ b/clase-1/Pages/plantel.html
@@ -81,9 +81,9 @@
     
       </header>
 
-      <section class="fondoimagen row-12 d-flex justify-content-between">
+      <section class="fondoimagen row d-flex justify-content-center">
 
-            <table class="col-5 m-3 ml-5 rounded table table-dark table-hover">
+            <table class="m-5 col-12 col-sm-12 col-md-5 col-lg-5 rounded table table-dark table-hover anchotabla">
                 <thead>
                   <tr>
                     <th scope="col">#</th>
@@ -192,9 +192,9 @@
                 </tbody>
             </table>
 
-            <section class="d-flex flex-column justify-content-center align-items-center col-8">
+            <section class="d-flex flex-column justify-content-center align-items-center col-12 col-sm-12 col-md-5 col-lg-5">
                 <!-- Presentacion personal de capitan -->
-                <article class="p-3 m-3 yearcolor d-flex flex-column justify-content-center col-6">
+                <article class="p-3 m-3 yearcolor d-flex flex-column justify-content-center">
                     <img class="" src="../Merengue/img/kolo-copa.jpeg" alt="Foto lolo ">
                     <h3>Marcelo Perez - Capitan</h3>
                     <p class="w-80">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis corporis cum sapiente excepturi error sequi deserunt culpa quasi est veritatis nam delectus animi, id libero magni. Dignissimos tempora a numquam.</p>
@@ -202,7 +202,7 @@
                 </article>
 
                 <!-- Presentacion personal de goleador -->
-                <article class=" yearcolor d-flex flex-column justify-content-center col-6">
+                <article class="p-3 m-3 yearcolor d-flex flex-column justify-content-center ">
                     <img class="" src="../Merengue/img/kolo-copa.jpeg" alt="Foto lolo ">
                     <h3>Marcelo Perez - Goleador</h3>
                     <p class="w-80">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis corporis cum sapiente excepturi error sequi deserunt culpa quasi est veritatis nam delectus animi, id libero magni. Dignissimos tempora a numquam.</p>
