--- a/clase-1/Pages/historia.html
+++ b/clase-1/Pages/historia.html
@@ -113,9 +113,9 @@
                     <h4 class="year animated-white m-3 p-2 "><strong> 2018</strong></h4>
 
                     <section class=" ">    
-                        <h2 class="animated-white">- TITULO</h2>
-                        <p class="animated-white"> perspiciatis adipisci fugiat eum animi temporibus omnis neque quod sunt a quas magnam facilis. Molestias sed, cupiditate reiciendis culpa asperiores soluta pariatur consectetur ea fuga dicta ab dignissimos, obcaecati voluptatum! Exercitationem nulla, dolores repudiandae error blanditiis nobis tempore! Iure quam eaque facere itaque officiis obcaecati mollitia autem qui, ullam amet exercitationem id consequatur quos? Aspernatur a ipsam quas voluptas dignissimos, repellendus facilis rerum dicta laudantium reiciendis eum natus laboriosam animi consequatur ad asperiores! Quisquam modi porro itaque accusantium, dolores, optio tempore molestias molestiae fugit alias nam libero ullam. Vero quidem pariatur natus explicabo, nesciunt eligendi rem sed ad similique dolorum assumenda nulla unde recusandae dolore, laudantium aliquid.</p>
-                        <img class="imghistoria" src="../Merengue/img/festejo2.jpeg" alt="imagen equipo capachos">
+                        <h2 class="animated-white">- COMIENZA UNA HISTORIA</h2>
+                        <p class="animated-white"> <center> Comienza una nueva historia para el equipo merengue, lo que comenzó como un grupo de amigos juntandose a jugar al truco de vez en cuando, amantes del futbol, culminó en un equipo de futbol y una familia. Dispuestos a ganar todo lo que se le pusiera por delante, asi fue, en su primer campeonato, el merengue sale campeon de la copa de oro de forma invicta en la conocida organización Capachos Futbol 8</center></p>
+                        <img class="imghistoria" src="../Merengue/img/2018-EQUIPO.jpeg" alt="imagen equipo capachos">
                         <img class=" imgescudodesaparece" src="../Merengue/img/escudo-rmfc.png" alt="imagen graficas">
 
                     </section>
@@ -132,9 +132,9 @@
                     <h4 class="year animated-white m-3 p-2 "><strong> 2019</strong></h4>
 
                     <section class=" ">    
-                        <h2 class="animated-white">- TITULO</h2>
-                        <p class="animated-white"> perspiciatis adipisci fugiat eum animi temporibus omnis neque quod sunt a quas magnam facilis. Molestias sed, cupiditate reiciendis culpa asperiores soluta pariatur consectetur ea fuga dicta ab dignissimos, obcaecati voluptatum! Exercitationem nulla, dolores repudiandae error blanditiis nobis tempore! Iure quam eaque facere itaque officiis obcaecati mollitia autem qui, ullam amet exercitationem id consequatur quos? Aspernatur a ipsam quas voluptas dignissimos, repellendus facilis rerum dicta laudantium reiciendis eum natus laboriosam animi consequatur ad asperiores! Quisquam modi porro itaque accusantium, dolores, optio tempore molestias molestiae fugit alias nam libero ullam. Vero quidem pariatur natus explicabo, nesciunt eligendi rem sed ad similique dolorum assumenda nulla unde recusandae dolore, laudantium aliquid.</p>
-                        <img class="imghistoria" src="../Merengue/img/festejo2.jpeg" alt="imagen equipo capachos">
+                        <h2 class="animated-white">- NUEVO AÑO, BAJAS Y ALTAS</h2>
+                        <p class="animated-white"> <center> Luego de un año arrasador en la liga Capachos, el merengue tiene su primer bajón futbolistico, a base de abandonos y una lesión muy importante, el merengue no solo pierde el campeonato siguiente estando en media tabla, si no que pierde a su lateral izquierdo titular por una rotura de ligamentos cruzados. Trabajando para mejorar, llegamos a nuestro final con el convenio entre Capachos y el club blanco, por falta de compromiso de parte de la organización. </center></p>
+                        <img class="imghistoria" src="../Merengue/img/2019-EQUIPO.jpeg" alt="imagen equipo capachos">
                         <img class="imgescudodesaparece" src="../Merengue/img/escudo-rmfc.png" alt="imagen graficas">
 
                     </section>
@@ -151,9 +151,9 @@
                     <h4 class="year animated-white m-3 p-2 "><strong> 2020</strong></h4>
 
                     <section class="row-10 ">    
-                        <h2 class="animated-white">- TITULO</h2>
-                        <p class="animated-white"> perspiciatis adipisci fugiat eum animi temporibus omnis neque quod sunt a quas magnam facilis. Molestias sed, cupiditate reiciendis culpa asperiores soluta pariatur consectetur ea fuga dicta ab dignissimos, obcaecati voluptatum! Exercitationem nulla, dolores repudiandae error blanditiis nobis tempore! Iure quam eaque facere itaque officiis obcaecati mollitia autem qui, ullam amet exercitationem id consequatur quos? Aspernatur a ipsam quas voluptas dignissimos, repellendus facilis rerum dicta laudantium reiciendis eum natus laboriosam animi consequatur ad asperiores! Quisquam modi porro itaque accusantium, dolores, optio tempore molestias molestiae fugit alias nam libero ullam. Vero quidem pariatur natus explicabo, nesciunt eligendi rem sed ad similique dolorum assumenda nulla unde recusandae dolore, laudantium aliquid.</p>
-                        <img class="imghistoria" src="../Merengue/img/festejo2.jpeg" alt="imagen equipo capachos">
+                        <h2 class="animated-white">- UNA NUEVA ESPERANZA</h2>
+                        <p class="animated-white"> <center> Tras varios idas y vueltas, el merengue vuelve con todo este 2020 en una nueva liga, ampliando horizontes. Nada mas y nada menos que Mundialito los Ceibos, en nuestro primer campeonato, repetimos lo que ya se empezaba a hacer costumbre a la hora de debutar en un campeonato, campeones invictos. A base de artilleros letales como Mauro de Souza y Agustin Camelo, y una unidad impenetrable en defensa, el merengue alza la copa de oro, en nombre de todos los que se fueron y los que vendrán.</center></p>
+                        <img class="imghistoria" src="../Merengue/img/2020-EQUIPO.jpeg" alt="imagen equipo capachos">
                         <img class="imgescudodesaparece" src="../Merengue/img/escudo-rmfc.png" alt="imagen graficas">
 
                     </section>
@@ -170,9 +170,9 @@
                     <h4 class="year animated-white m-3 p-2 "><strong>2021</strong></h4>
 
                     <section class="row-10 ">    
-                        <h2 class="animated-white">- TITULO</h2>
-                        <p class="animated-white"> perspiciatis adipisci fugiat eum animi temporibus omnis neque quod sunt a quas magnam facilis. Molestias sed, cupiditate reiciendis culpa asperiores soluta pariatur consectetur ea fuga dicta ab dignissimos, obcaecati voluptatum! Exercitationem nulla, dolores repudiandae error blanditiis nobis tempore! Iure quam eaque facere itaque officiis obcaecati mollitia autem qui, ullam amet exercitationem id consequatur quos? Aspernatur a ipsam quas voluptas dignissimos, repellendus facilis rerum dicta laudantium reiciendis eum natus laboriosam animi consequatur ad asperiores! Quisquam modi porro itaque accusantium, dolores, optio tempore molestias molestiae fugit alias nam libero ullam. Vero quidem pariatur natus explicabo, nesciunt eligendi rem sed ad similique dolorum assumenda nulla unde recusandae dolore, laudantium aliquid.</p>
-                        <img class="imghistoria" src="../Merengue/img/festejo2.jpeg" alt="imagen equipo capachos">
+                        <h2 class="animated-white">- SEGUNDO AÑO EN MUNDIALITO</h2>
+                        <p class="animated-white"> <center> Luego de vencer en el torneo 2020, el merengue es invitado a participar en la Copa de Campeones de Mundialito los Ceibos, 120 equipos, una ilusión. Debutamos contra Carboneros en la primera fecha, con una derrota por 3 a 1 que quita moral y motivación en cualquier cuadro, menos en el merengue. Luego de ese baldazo de agua fria, el elenco real sale a demoler todo lo que tiene en frente, ganando la fase de grupos y venciendo a todos los que se enfrentan a esta unidad que sin lugar a dudas, da que hablar cuando las papas queman. Entre 120 cuadros, el merengue alza la copa de campeón, cerrando varias bocas y despertando la atención de grandes ligas. Luego de dominar Mundialito Los Ceibos, decidimos abandonar la liga dado que somos intimados por la organización más grande de futbol 8 amateur del pais, LIGA SIETE. </center> </p>
+                        <img class="imghistoria" src="../Merengue/img/2021-EQUIPO.jpeg" alt="imagen equipo capachos">
                         <img class="imgescudodesaparece" src="../Merengue/img/escudo-rmfc.png" alt="imagen graficas">
 
                     </section>
@@ -183,6 +183,26 @@
 
 
             </section>
+
+
+            <section class="d-flex justify-content-center">
+              <section class="animated-year yearcolor rounded-lg p-3 col-10 mb-5 fondo-texto-descripcion d-flex justify-content-around">
+                  <h4 class="year animated-white m-3 p-2 "><strong>2022</strong></h4>
+
+                  <section class="row-10 ">    
+                      <h2 class="animated-white">- LIGA SIETE, UNA NUEVA ILUSIÓN</h2>
+                      <p class="animated-white"> <center> Hoy nos vemos incluidos en la organización Liga Siete, un torneo con 7 divisionales, en la cual a base de ascensos, se puede lograr una clasificación a Copa Libertadores, en Rio de Janeiro. Todavía no se inició oficialmente en la liga, pero a principio de Junio nos ofrecen integrar una liga de posibles cuadros por afiliarse a esta prestigiosa liga. Como fue la historia? El merengue nuevamente alza la copa de campeón, demostrando que esta para llegar a lo más alto y visitar al Cristo Redentor. Continuará... </center></p>
+                      <img class="imghistoria" src="../Merengue/img/2022-EQUIPO.jpeg" alt="imagen equipo capachos">
+                      <img class="imgescudodesaparece" src="../Merengue/img/escudo-rmfc.png" alt="imagen graficas">
+
+                  </section>
+                  
+              </section>
+
+
+
+
+          </section>
 
         </main>
 
