--- a/clase-1/index.html
+++ b/clase-1/index.html
@@ -138,12 +138,12 @@
 
 
                     <section class=" mt-4 p-3 d-flex justify-content-center rounded-lg">
-                        <p class="d-flex justify-content-center align-content-center ">Lorem ipsuntium magnam, eligendi quasi optio aperiam in dignissimos corporis cupiditate. Cum, tenetur nam? Corporis, non a?</p>
+                        <p class="d-flex justify-content-center align-content-center "> <center>MARZO 2022 - CAMPEONES COPA DE CAMPEONES MUNDIALITO LOS CEIBOS - 3era COPA</center></p>
                     </section>
                 </div>
                 <section class="section2 d-flex flex-column justify-content-center align-items-center col-12 col-sm-12 col-md-4 col-lg-4   m-3 h-100 rounded-lg">
                     <img class=" w-100 h-50 m-4 rounded " src="./merengue/img/corrida-hacia-copa.jpg" alt="fotohacialacopa">
-                    <p>Lorem ipsum, dolor Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim repfuga beatae veritatis similique accusantium autem ex eum repudiandae minus rem deleniti. sit amet consectetur adipisicing elit. Delectus totam aperiam repellendus sunt numquam autem minus! Impedit rem, delectus obcaecati commodi a quas dolores quasi natus voluptate vitae officiis quibusdam.</p>
+                    <p>  Lorem ipsum, dolor Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim repfuga beatae veritatis similique accusantium autem ex eum repudiandae minus rem deleniti. sit amet consectetur adipisicing elit. Delectus totam aperiam repellendus sunt numquam autem minus! Impedit rem, delectus obcaecati commodi a quas dolores quasi natus voluptate vitae officiis quibusdam.</p>
                         
                 </section>
 
